# mutt-wizard

./: .gitignore  FUNDING.yml  README.md  pyproject.toml
.github/workflows/: publish.yml
scripts/: install_xoauth2_macos.sh
src/mutt_wizard/: __init__.py  cli.py  config.py  mailsync.py  oauth.py  templates.py
